--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/Parameter.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/Parameter.adoc
@@ -16,6 +16,7 @@ Collects together all domain semantics of an action parameter within a single an
   String regexPattern() default "";     // <.>
   int regexPatternFlags() default 0;     // <.>
   String regexPatternReplacement() default "Doesn't match pattern";     // <.>
+  DependentDefaultsPolicy dependentDefaultsPolicy() default DependentDefaultsPolicy.AS_CONFIGURED;     // <.>
 }
 ----
 
@@ -53,6 +54,11 @@ Pattern flags, as per _java.util.regex.Pattern#compile(String, int)_ .
 +
 --
 Replacement text for the pattern in generated error message.
+--
+<.> xref:#dependentDefaultsPolicy[dependentDefaultsPolicy]
++
+--
+Whether this parameter should be reset to its default if an earlier parameter changes its value, or whether instead the parameter's value, once changed by the end-user, should never be overwritten even if the end-user changes an earlier parameter value.
 --
 
 == Members
@@ -103,6 +109,11 @@ The default value, `0` , means that no flags have been specified.
 === regexPatternReplacement
 
 Replacement text for the pattern in generated error message.
+
+[#dependentDefaultsPolicy]
+=== dependentDefaultsPolicy
+
+Whether this parameter should be reset to its default if an earlier parameter changes its value, or whether instead the parameter's value, once changed by the end-user, should never be overwritten even if the end-user changes an earlier parameter value.
 
 include::hooks/Parameter_010-examples-and-usage.adoc[]
 
