--- a/antora/components/refguide-index/modules/applib/pages/index/services/metamodel/BeanSort.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/metamodel/BeanSort.adoc
@@ -21,7 +21,7 @@ enum BeanSort {
   UNKNOWN
   boolean isManagedBeanContributing()
   boolean isManagedBeanNotContributing()
-  boolean isManagedBean()
+  boolean isManagedBeanAny()
   boolean isMixin()
   boolean isViewModel()
   boolean isValue()
