--- a/antora/components/refguide-index/modules/applib/pages/index/services/registry/ServiceRegistry.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/registry/ServiceRegistry.adoc
@@ -13,8 +13,8 @@ interface ServiceRegistry {
   Can<T> select(Class<T> type)     // <.>
   Stream<_ManagedBeanAdapter> streamRegisteredBeansOfType(Class<?> requiredType)     // <.>
   Stream<_ManagedBeanAdapter> streamRegisteredBeans()     // <.>
-  Optional<_ManagedBeanAdapter> lookupRegisteredBeanById(String id)     // <.>
-  _ManagedBeanAdapter lookupRegisteredBeanByIdElseFail(String id)     // <.>
+  Optional<_ManagedBeanAdapter> lookupRegisteredBeanById(LogicalType id)     // <.>
+  _ManagedBeanAdapter lookupRegisteredBeanByIdElseFail(LogicalType id)     // <.>
   Optional<?> lookupBeanById(String id)
   Optional<T> lookupService(Class<T> serviceClass)     // <.>
   Optional<T> lookupService(Class<T> serviceClass, Comparator<Object> comparator)     // <.>
@@ -43,12 +43,12 @@ Streams all registered bean adapters implementing the requested type.
 --
 Returns all bean adapters that have been registered.
 --
-<.> xref:#lookupRegisteredBeanById_String[lookupRegisteredBeanById(String)]
+<.> xref:#lookupRegisteredBeanById_LogicalType[lookupRegisteredBeanById(LogicalType)]
 +
 --
 Returns a registered bean of given _name_ .
 --
-<.> xref:#lookupRegisteredBeanByIdElseFail_String[lookupRegisteredBeanByIdElseFail(String)]
+<.> xref:#lookupRegisteredBeanByIdElseFail_LogicalType[lookupRegisteredBeanByIdElseFail(LogicalType)]
 +
 --
 Returns a registered bean of given _name_ , or throws when no such bean.
@@ -96,13 +96,13 @@ Streams all registered bean adapters implementing the requested type.
 
 Returns all bean adapters that have been registered.
 
-[#lookupRegisteredBeanById_String]
-=== lookupRegisteredBeanById(String)
+[#lookupRegisteredBeanById_LogicalType]
+=== lookupRegisteredBeanById(LogicalType)
 
 Returns a registered bean of given _name_ .
 
-[#lookupRegisteredBeanByIdElseFail_String]
-=== lookupRegisteredBeanByIdElseFail(String)
+[#lookupRegisteredBeanByIdElseFail_LogicalType]
+=== lookupRegisteredBeanByIdElseFail(LogicalType)
 
 Returns a registered bean of given _name_ , or throws when no such bean.
 
