ISIS-3197: regen docs once more

--- a/antora/components/refguide-index/modules/applib/pages/index/layout/component/CollectionLayoutData.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/component/CollectionLayoutData.adoc
@@ -27,6 +27,8 @@ class CollectionLayoutData {
   void setPaged(Integer paged)
   String getSortedBy()
   void setSortedBy(String sortedBy)
+  TableDecoration getTableDecoration()
+  void setTableDecoration(TableDecoration tableDecoration)
   List<ActionLayoutData> getActions()
   void setActions(List<ActionLayoutData> actionLayoutDatas)
   CollectionLayoutDataOwner getOwner()     // <.>
